Calendar (bug fix): fixing scrollbar issue that occurs with Go to today button (#3531)
* no message

* no message

* Add fix for today button issue

* Adding change file

--- a/packages/office-ui-fabric-react/src/components/Calendar/Calendar.scss
+++ b/packages/office-ui-fabric-react/src/components/Calendar/Calendar.scss
@@ -543,6 +543,12 @@ $Calendar-dayPicker-margin: 10px;
     }
     .holder {
       height: 240px;
+      min-height: 240px;
+    }
+
+    .holderWithButton{
+      padding-top:6px;
+      height: auto;
     }
   }
 }
